Fix layout issue with floating thumbnails on the forms page.

--- a/style.css
+++ b/style.css
@@ -410,6 +410,7 @@ nav li.current a:hover {
 }
 
 .project-thumb {
+  position: relative;
   width: 200px;
   height: 170px;
   overflow: hidden;
@@ -425,6 +426,7 @@ nav li.current a:hover {
   .project-thumb {
     float: right;
     margin-left: 30px;
+    top: -50px;
   }
 
 }
@@ -439,6 +441,12 @@ nav li.current a:hover {
 
 .project-forms section {
   border-top: 2px solid #ccc;
+}
+
+.project-forms section::after {
+  content: '';
+  display: block;
+  clear: both;
 }
 
 /* FOOTER AREA STYLES */
